--- a/flaskblog/static/sass/index.scss
+++ b/flaskblog/static/sass/index.scss
@@ -1,3 +1,11 @@
 @import "nav.scss";
-@import "background.scss";
 @import "blog-post.scss";
+
+.background {
+    background: #ce24ce;
+    width: 100%;
+    padding: 7rem;
+    font-size: 2rem;
+    color: #ffffff;
+    text-align: center;
+}
