--- a/flaskblog/static/sass/login.scss
+++ b/flaskblog/static/sass/login.scss
@@ -40,8 +40,16 @@ body {
 
     }
 }
+.alert {
+    margin-top: 6rem !important;
+    z-index: 3;
+}
 
 @media (max-width: 768px) {
+    .alert {
+        width: 100%;
+    }
+    
     .register-section {
         width: 100%;
         border: none; 
