--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -33,6 +33,7 @@
                     {% if current_user.is_authenticated %}
                     <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
                     <a class="dropdown-item" href="{{ url_for('account') }}">Account</a>
+                    <a class="dropdown-item" href="{{ url_for('new_post') }}">New Post</a>
                     {% else %}
                     <a class="dropdown-item" href="{{ url_for('login') }}">Login</a>
                     <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
