--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block header%}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/index.scss.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/home.scss.css') }}" />
 {% endblock header %}
 {% block content %}
 <nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-around fixed-top">
@@ -33,6 +33,7 @@
                     {% if current_user.is_authenticated %}
                     <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
                     <a class="dropdown-item" href="{{ url_for('account') }}">Account</a>
+                    <a class="dropdown-item" href="{{ url_for('new_post') }}">New Post</a>
                     {% else %}
                     <a class="dropdown-item" href="{{ url_for('login') }}">Login</a>
                     <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
@@ -48,31 +49,24 @@
 </main>
 
 <section class="blog-posts row">
+    {% for post in posts %}
     <div class="col-xs-12 col-lg-6">
-        <div class="blog-post">
-            <img src="{{ url_for('static', filename='power-station.jpg') }}" alt="blog-image" class="blog-img">
-            <div class="blog-info">
-                <p class="blog-category text-muted">JOURNAL</p>
-                <h3 class="blog-title">Hexagon selvage trust fund</h3>
-                <p class="blog-text text-muted mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
-                    debitis sint
-                    deserunt quis nulla est, nihil aliat..</p>
-                <button class="btn read-more">READ MORE</button>
+        <div class="card text-center">
+            <img src="{{ url_for('static', filename='post-pics/' + post.image_file ) }}" alt="blog-image"
+                class="blog-img card-img-top" />
+            <div class="card-body">
+                <p class="blog-category text-muted">{{ post.category }}</p>
+                <h3 class="card-title">{{ post.title }}</h3>
+                <div class="d-flex justify-content-around align-items-center mb-2">
+                    <img src="{{url_for('static', filename='profile-pics/' + post.author.image_file)}}" alt="avatar"
+                        class="avatar">
+                    <p class="card-text text-muted">{{post.author.fullname}} | |
+                        {{post.created_at.strftime("%d %B, %Y") }}</p>
+                </div>
+                <a class="btn read-more" href="{{ url_for('get_post', id=post.id) }}">READ MORE</a>
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-lg-6">
-        <div class="blog-post">
-            <img src="{{ url_for('static', filename='power-station.jpg') }}" alt="blog-image" class="blog-img">
-            <div class="blog-info">
-                <p class="blog-category text-muted">JOURNAL</p>
-                <h3 class="blog-title">Hexagon selvage trust fund</h3>
-                <p class="blog-text text-muted mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
-                    debitis sint
-                    totam error...</p>
-                <button class="btn read-more">READ MORE</button>
-            </div>
-        </div>
-    </div>
+    {% endfor %}
 </section>
 {% endblock content %}
