--- a/flaskblog/static/sass/post.scss
+++ b/flaskblog/static/sass/post.scss
@@ -53,7 +53,7 @@
         a {
             text-decoration: none;
         }
-        .fa {
+        .fab {
             font-size: 3rem;
         }
         .fa-facebook-square {
@@ -62,7 +62,7 @@
         .fa-twitter-square {
             color: #00acee;
         }   
-        .fa-linkedin-square {
+        .fa-linkedin {
             color: #0e76a8;
         }
     }
