--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -26,7 +26,7 @@
                     {% if image_file %}
                     <img src="{{ image_file}}" alt="account" class="avatar">
                     {% else %}
-                    <i class="fa fa-user-circle fa-2x" aria-hidden="true"></i>
+                    <i class="fas fa-user-circle fa-2x"></i>
                     {% endif %}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
