--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -26,7 +26,7 @@
                     {% if image_file %}
                     <img src="{{ image_file}}" alt="account" class="avatar">
                     {% else %}
-                    <i class="fa fa-user-circle fa-2x" aria-hidden="true"></i>
+                    <i class="fas fa-user-circle fa-2x"></i>
                     {% endif %}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
@@ -49,7 +49,7 @@
 </main>
 
 <section class="blog-posts row">
-    {% for post in posts %}
+    {% for post in posts.items %}
     <div class="col-xs-12 col-lg-6">
         <div class="card text-center">
             <img src="{{ url_for('static', filename='post-pics/' + post.image_file ) }}" alt="blog-image"
@@ -59,8 +59,10 @@
                 <h3 class="card-title">{{ post.title }}</h3>
                 <div class="d-flex justify-content-around align-items-center mb-2">
                     <img src="{{url_for('static', filename='profile-pics/' + post.author.image_file)}}" alt="avatar"
-                        class="avatar">
-                    <p class="card-text text-muted">{{post.author.fullname}} | |
+                        class="user-img">
+                    <p class="card-text text-muted"><a
+                            href="{{ url_for('get_user' , username=post.author.username) }}">{{post.author.username}}</a>
+                        | |
                         {{post.created_at.strftime("%d %B, %Y") }}</p>
                 </div>
                 <a class="btn read-more" href="{{ url_for('get_post', id=post.id) }}">READ MORE</a>
@@ -68,5 +70,13 @@
         </div>
     </div>
     {% endfor %}
+    <div class="col-12 paginate">
+        {% if prev_url %}
+        <a class="btn prev" href="{{ prev_url }}"><i class="fas fa-chevron-left mr-2"></i> Prev Page</a>
+        {% endif %}
+        {% if next_url %}
+        <a class="btn next" href="{{ next_url }}">Next Page<i class="fas fa-chevron-right ml-2"></i></a>
+        {% endif %}
+    </div>
 </section>
 {% endblock content %}
