--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -26,7 +26,7 @@
                     {% if image_file %}
                     <img src="{{ image_file}}" alt="account" class="avatar">
                     {% else %}
-                    <i class="fa fa-user-circle fa-2x" aria-hidden="true"></i>
+                    <i class="fas fa-user-circle fa-2x"></i>
                     {% endif %}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
@@ -51,18 +51,18 @@
     <div class="post-info">
         <div class="d-flex justify-content-around">
             <a href="{{ post.author.facebook_link }}">
-                <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                <i class="fab fa-facebook-square"></i>
             </a>
             <a href="{{ post.author.instagram_link }}">
                 <span class="instagram">
-                    <span class="fa fa-instagram" aria-hidden="true"></span>
+                    <span class="fab fa-instagram"></span>
                 </span>
             </a>
             <a href="{{ post.author.twitter_link }}">
-                <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                <i class="fab fa-twitter-square"></i>
             </a>
             <a href="{{ post.author.linkedin_link}}">
-                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                <i class="fab fa-linkedin"></i>
             </a>
         </div>
         <div class="d-flex justify-content-around text-muted">
