feat: Created and Styled the reset  password pages

--- a/flaskblog/static/sass/user.scss
+++ b/flaskblog/static/sass/user.scss
@@ -43,6 +43,7 @@
             }
         }
         .media-links {
+            margin-top: 0.5rem;
             display: flex;
             width: 60%;
             justify-content: space-around;
