--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -49,7 +49,7 @@
         </div>
         <div class="form-group">
             <p class="text-center">
-                Forgot Password? <a class="ml-2" href="#">Reset</a>
+                Forgot Password? <a class="ml-2" href="{{ url_for('reset_request') }}">Reset</a>
             </p>
         </div>
     </form>
