feat: Changed layout and style of the page

--- a/flaskblog/static/sass/blog-post.scss
+++ b/flaskblog/static/sass/blog-post.scss
@@ -4,7 +4,7 @@
     min-height: 40rem;
     background: white;
     padding: 1rem;
-    margin: -3rem auto 0 auto ;
+    margin: -3rem auto 2rem auto ;
     box-shadow: 2px 4px 1px 3px rgba(80, 73, 73, 0.295);
 
     .blog-post {
