--- a/flaskblog/templates/reset-request.html
+++ b/flaskblog/templates/reset-request.html
@@ -4,7 +4,7 @@
 {% endblock header %}
 {% block content %}
 <div class="register-section">
-    <form method="POST" >
+    <form method="POST" novalidate>
         {{ form.hidden_tag() }}
         <legend class="mb-4">Reset Your Password</legend>
         <div class="form-group">
