--- a/flaskblog/templates/reset-token.html
+++ b/flaskblog/templates/reset-token.html
@@ -4,7 +4,7 @@
 {% endblock header %}
 {% block content %}
 <div class="register-section">
-    <form method="POST">
+    <form method="POST" novalidate>
         {{ form.hidden_tag() }}
         <legend class="mb-4">Change Password for @{{user.username}}</legend>
         <div class="form-group">
@@ -42,3 +42,4 @@
 
 </div>
 {% endblock content %}
+
