--- a/flaskblog/static/sass/home.scss
+++ b/flaskblog/static/sass/home.scss
@@ -12,59 +12,76 @@
 }
 
 .blog-img {
-    height: inherit;
+    height: 18rem;
     border-radius: inherit;
+    border-bottom: 1px solid #ce24ce;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .blog-category {
     text-transform: uppercase;
     margin-bottom: 0.2rem;
+    font-size: 0.9rem;
 }
 
 .card {
-    width: 80%;
+    width: 92%;
     margin: auto;
+    border: 1px solid #ce24ce;
     .card-title {
         color: #ce24ce;
         text-transform: uppercase;
         margin-bottom: 0.2rem;
+        font-size: 1.3rem;
     }
     .card-text {
         flex: 2;
+        font-size: 1rem;
         a {
             color: #ce24ce !important;
             text-decoration: none;
         }
     }
+    .user-img {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+    }
+
+    .read-more {
+        background: #ce24ce !important;
+        color: #fff;
+        border: none;
+        outline: none;
+        padding: 0.5rem 1.5rem;
+        border-radius: 0.2rem;
+        border-color: #ce24ce;
+    }
 }
 
-.user-img {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-}
 
-.read-more {
-    background: #ce24ce !important;
-    color: #fff;
-    border: none;
-    outline: none;
-    padding: 0.7rem 1.7rem;
-    border-radius: 0.2rem;
-    border-color: #ce24ce;
+@media(max-width: 870px) {
+    .blog-img {
+        height: 14rem;
+    }
 }
 
 @media (max-width: 768px) {
     .card {
-    width: 100%;
-    .card-title {
-        color: #ce24ce;
-        text-transform: uppercase;
-        margin-bottom: 0.2rem;
-        font-size: 1.2rem;
+        width: 100%;
+        .card-title {
+            color: #ce24ce;
+            text-transform: uppercase;
+            margin-bottom: 0.2rem;
+            font-size: 1.1rem;
+        }
+        .card-text {
+            flex: 2;
+            font-size: 0.9rem;
+        }
+        .blog-img {
+            height: 14rem;
+        }
     }
-    .card-text {
-        flex: 2;
-    }
-}
 }
