--- a/flaskblog/static/sass/user.scss
+++ b/flaskblog/static/sass/user.scss
@@ -12,7 +12,6 @@
         border-radius: 50%;
     }
     .media-body {
-        flex: none;
         padding-left: 3rem;
         letter-spacing: 2px;
         .about {
@@ -49,7 +48,7 @@
             justify-content: space-around;
             align-items: center;
             .fab {
-            font-size: 2rem;
+            font-size: 3rem;
             }
             .fa-facebook-square {
                 color: #3b5998;
@@ -60,75 +59,93 @@
             .fa-linkedin {
                 color: #0e76a8;
             }
+            .instagram {
+                display: inline-block;
+                width: 3rem;
+                height: 3rem;
+                text-align: center;
+                border-radius: 0.8rem;
+                font-size: 2rem !important;
+                color: #fff;
+                line-height: 2rem;
+                vertical-align: middle;
+                background: #d6249f;
+                background: radial-gradient(circle at 30% 107%,
+                #fdf497 0%, #fdf497 5%, 
+                #fd5949 45%, #d6249f 60%, #285AEB 90% );
+                box-shadow: 0px 3px 10px rgba(0, 0, 0, .25);
+            }
         }
     }
 }
 
 
 .blog-img {
-    height: inherit;
+    height: 17rem;
     border-radius: inherit;
+    border-bottom: 1px solid #ce24ce;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .blog-category {
     text-transform: uppercase;
     margin-bottom: 0.2rem;
+    font-size: 0.9rem;
 }
 
 .card {
-    width: 80%;
+    width: 93%;
     margin: auto;
+    border: 1px solid #ce24ce;
     .card-title {
         color: #ce24ce;
+        font-size: 1.3rem;
         text-transform: uppercase;
         margin-bottom: 0.2rem;
     }
     .card-text {
         flex: 2;
+        font-size: 1rem;
+    }
+    .user-img {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
     }
 }
 
-.user-img {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-}
 
-.read-more {
-    background: #ce24ce !important;
-    color: #fff;
-    border: none;
-    outline: none;
-    padding: 0.7rem 1.7rem;
-    border-radius: 0.2rem;
-    border-color: #ce24ce;
-}
 
 @media (max-width: 768px) {
     .card {
-    width: 100%;
-    .card-title {
-        color: #ce24ce;
-        text-transform: uppercase;
-        margin-bottom: 0.2rem;
-        font-size: 1.2rem;
+        width: 100%;
+        .card-title {
+            color: #ce24ce;
+            text-transform: uppercase;
+            margin-bottom: 0.2rem;
+            font-size: 1.1rem;
+        }
+        .card-text {
+            flex: 2;
+            font-size: 0.7rem;
+        }
+        .blog-img {
+            height: 14rem;
+        }
     }
-    .card-text {
-        flex: 2;
-    }
-}
 }
 
 .blog-posts {
     width: 90% ;
     .read-more {
-    background: #ce24ce !important;
-    color: #fff;
-    border: none;
-    outline: none;
-    padding: 0.7rem 1.7rem;
-    border-radius: 0.2rem;
-    border-color: #ce24ce;
+        background: #ce24ce !important;
+        color: #fff;
+        border: none;
+        outline: none;
+        padding: 0.5rem 1.5rem;
+        border-radius: 0.2rem;
+        border-color: #ce24ce;  
     }
 }
 
@@ -159,5 +176,8 @@
     }
     .heading {
         font-size: 1.1rem;
+    }
+    .blog-img {
+        height: 16rem;
     }
 }
