--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -4,7 +4,7 @@
 {% endblock header %}
 {% block content %}
 <nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-around fixed-top">
-    <a class="navbar-brand ml-lg-4" href="{{ url_for('home') }}">Kenzy</a>
+    <a class="navbar-brand ml-lg-4" href="{{ url_for('main.home') }}">Kenzy</a>
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavId"
         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse  " id="collapsibleNavId">
         <ul class="navbar-nav w-75 d-flex align-items-center justify-content-around mx-auto mt-2 mt-lg-0 ">
             <li class="nav-item ">
-                <a class="nav-link" href="{{ url_for('home') }}">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('main.home') }}">HOME <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
+                <a class="nav-link" href="{{ url_for('main.about') }}">ABOUT</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">CONTACT</a>
@@ -31,12 +31,12 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     {% if current_user.is_authenticated %}
-                    <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
-                    <a class="dropdown-item" href="{{ url_for('account') }}">Account</a>
-                    <a class="dropdown-item" href="{{ url_for('new_post') }}">New Post</a>
+                    <a class="dropdown-item" href="{{ url_for('users.logout') }}">Logout</a>
+                    <a class="dropdown-item" href="{{ url_for('users.account') }}">Account</a>
+                    <a class="dropdown-item" href="{{ url_for('posts.new_post') }}">New Post</a>
                     {% else %}
-                    <a class="dropdown-item" href="{{ url_for('login') }}">Login</a>
-                    <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
+                    <a class="dropdown-item" href="{{ url_for('users.login') }}">Login</a>
+                    <a class="dropdown-item" href="{{ url_for('users.register') }}">Register</a>
                     {% endif %}
                 </div>
             </li>
@@ -53,7 +53,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img src="{{ url_for('static', filename='haaland.jfif')}}" alt="First slide" class="d-block w-100" />
+            <img src="{{ url_for('static', filename='power-station.jpg')}}" alt="First slide" class="d-block w-100" />
             <div class="carousel-caption d-md-block">
                 <h3>Trending and Popular</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quis modi eveniet facilis, quae
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{{ url_for('static', filename='trump.jfif')}}" alt="Third slide" class="d-block w-100" />
+            <img src="{{ url_for('static', filename='new-york.jpg')}}" alt="Third slide" class="d-block w-100" />
             <div class="carousel-caption d-md-block">
                 <h3>Informative</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam delectus ab quisquam culpa.
