--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -4,7 +4,7 @@
 {% endblock header %}
 {% block content %}
 <nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-around fixed-top">
-    <a class="navbar-brand ml-lg-4" href="{{ url_for('home') }}">Kenzy</a>
+    <a class="navbar-brand ml-lg-4" href="{{ url_for('main.home') }}">Kenzy</a>
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavId"
         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse  " id="collapsibleNavId">
         <ul class="navbar-nav w-75 d-flex align-items-center justify-content-around mx-auto mt-2 mt-lg-0 ">
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('home') }}">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('main.home') }}">HOME <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
+                <a class="nav-link" href="{{ url_for('main.about') }}">ABOUT</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">CONTACT</a>
@@ -31,12 +31,12 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     {% if current_user.is_authenticated %}
-                    <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
-                    <a class="dropdown-item" href="{{ url_for('account') }}">Account</a>
-                    <a class="dropdown-item" href="{{ url_for('new_post') }}">New Post</a>
+                    <a class="dropdown-item" href="{{ url_for('users.logout') }}">Logout</a>
+                    <a class="dropdown-item" href="{{ url_for('users.account') }}">Account</a>
+                    <a class="dropdown-item" href="{{ url_for('posts.new_post') }}">New Post</a>
                     {% else %}
-                    <a class="dropdown-item" href="{{ url_for('login') }}">Login</a>
-                    <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
+                    <a class="dropdown-item" href="{{ url_for('users.login') }}">Login</a>
+                    <a class="dropdown-item" href="{{ url_for('users.register') }}">Register</a>
                     {% endif %}
                 </div>
             </li>
@@ -48,9 +48,10 @@
     BLOG
 </main>
 
+
 <section class="blog-posts row">
     {% for post in posts.items %}
-    <div class="col-xs-12 col-lg-6">
+    <div class="col-xs-12 col-md-6 mb-4">
         <div class="card text-center">
             <img src="{{ url_for('static', filename='post-pics/' + post.image_file ) }}" alt="blog-image"
                 class="blog-img card-img-top" />
@@ -61,11 +62,11 @@
                     <img src="{{url_for('static', filename='profile-pics/' + post.author.image_file)}}" alt="avatar"
                         class="user-img">
                     <p class="card-text text-muted"><a
-                            href="{{ url_for('get_user' , username=post.author.username) }}">{{post.author.username}}</a>
+                            href="{{ url_for('users.get_user' , username=post.author.username) }}">{{post.author.username}}</a>
                         | |
                         {{post.created_at.strftime("%d %B, %Y") }}</p>
                 </div>
-                <a class="btn read-more" href="{{ url_for('get_post', id=post.id) }}">READ MORE</a>
+                <a class="btn read-more" href="{{ url_for('posts.get_post', id=post.id) }}">READ MORE</a>
             </div>
         </div>
     </div>
