--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>Flask Blog - {{ title }}</title>
+    <title>{{ title }} - Flask Blog</title>
     {% else %}
     <title>Flask Blog</title>
     {% endif %}
