--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -4,7 +4,7 @@
 {% endblock header %}
 {% block content %}
 <nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-around fixed-top">
-    <a class="navbar-brand ml-lg-4" href="{{ url_for('home') }}">Kenzy</a>
+    <a class="navbar-brand ml-lg-4" href="{{ url_for('main.home') }}">Kenzy</a>
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavId"
         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse  " id="collapsibleNavId">
         <ul class="navbar-nav w-75 d-flex align-items-center justify-content-around mx-auto mt-2 mt-lg-0 ">
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('home') }}">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('main.home') }}">HOME <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="{{ url_for('about') }}">ABOUT</a>
+                <a class="nav-link" href="{{ url_for('main.about') }}">ABOUT</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">CONTACT</a>
@@ -31,12 +31,12 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     {% if current_user.is_authenticated %}
-                    <a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a>
-                    <a class="dropdown-item" href="{{ url_for('account') }}">Account</a>
-                    <a class="dropdown-item" href="{{ url_for('new_post') }}">New Post</a>
+                    <a class="dropdown-item" href="{{ url_for('users.logout') }}">Logout</a>
+                    <a class="dropdown-item" href="{{ url_for('users.account') }}">Account</a>
+                    <a class="dropdown-item" href="{{ url_for('posts.new_post') }}">New Post</a>
                     {% else %}
-                    <a class="dropdown-item" href="{{ url_for('login') }}">Login</a>
-                    <a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
+                    <a class="dropdown-item" href="{{ url_for('users.login') }}">Login</a>
+                    <a class="dropdown-item" href="{{ url_for('users.register') }}">Register</a>
                     {% endif %}
                 </div>
             </li>
@@ -49,7 +49,7 @@
     <p class="post-title">{{post.title}}</p>
     <img src="{{ url_for('static', filename='post-pics/' + post.image_file) }}" alt="post-img" class="post-img" />
     <div class="post-info">
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-around align-items-center">
             <a href="{{ post.author.facebook_link }}">
                 <i class="fab fa-facebook-square"></i>
             </a>
@@ -68,10 +68,10 @@
         <div class="d-flex justify-content-around text-muted">
             <span>Posted On {{post.updated_at.strftime("%d %b, %Y, %I:%M %p")}}</span>
 
-            <span>
+            <span class="mt-3">
                 <img src="{{url_for('static', filename='profile-pics/' + post.author.image_file )}}" alt="avatar"
-                    class="img-author mr-3">
-                {{post.author.fullname}} | | {{post.author.job_title}}
+                    class="img-author mr-2">
+                {{post.author.fullname}}
             </span>
         </div>
     </div>
@@ -80,7 +80,7 @@
     </div>
     {% if post.author == current_user %}
     <div class="form-group">
-        <a href="{{ url_for('update_post', id=post.id) }}" class="btn btn-primary">UPDATE</a>
+        <a href="{{ url_for('posts.update_post', id=post.id) }}" class="btn btn-primary">UPDATE</a>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
             DELETE
@@ -101,7 +101,7 @@
                         and this action is irreversible
                     </div>
                     <div class="modal-footer">
-                        <form action="{{ url_for('delete_post', id=post.id) }}" method="post" class="p-0">
+                        <form action="{{ url_for('posts.delete_post', id=post.id) }}" method="post" class="p-0">
                             <input type="submit" class="btn btn-danger" value="DELETE" />
                         </form>
                     </div>
