feat: Creating and styling custom error pages

--- a/flaskblog/static/sass/login.scss
+++ b/flaskblog/static/sass/login.scss
@@ -2,6 +2,9 @@ body {
     width: 100vw;
     height: 100vh;
     background: #f1f1f1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .register-section {
