--- a/flaskblog/templates/user.html
+++ b/flaskblog/templates/user.html
@@ -45,7 +45,7 @@
 </nav>
 
 <div class="media">
-    <img src="{{ url_for('static', filename='profile-pics/' + user.image_file) }}" alt="avatar" class="img-user img-thumbnails ">
+    <img src="{{ user.image_file }}" alt="avatar" class="img-user img-thumbnails ">
     <div class="media-body">
         <p class="fullname">{{user.fullname}}</p>
         <small class="username text-muted">{{user.username}}</small>
@@ -97,13 +97,13 @@
     {% for post in posts.items %}
     <div class="col-xs-12 col-md-6 mb-3">
         <div class="card text-center">
-            <img src="{{ url_for('static', filename='post-pics/' + post.image_file ) }}" alt="blog-image"
+            <img src="{{ post.image_file }}" alt="blog-image"
                 class="blog-img card-img-top" />
             <div class="card-body">
                 <p class="blog-category text-muted">{{ post.category }}</p>
                 <h3 class="card-title">{{ post.title }}</h3>
                 <div class="d-flex justify-content-around align-items-center mb-2">
-                    <img src="{{url_for('static', filename='profile-pics/' + post.author.image_file)}}" alt="avatar"
+                    <img src="{{ post.author.image_file }}" alt="avatar"
                         class="user-img">
                     <p class="card-text text-muted"><a href="#" class="user-link">{{post.author.username}}</a> | |
                         {{post.created_at.strftime("%d %B, %Y") }}</p>
